--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -18,7 +18,7 @@ html {
 }
 
 h1 {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 44px;
   line-height: 52px;
 }
@@ -49,6 +49,14 @@ footer span {
 .item-menu {
   font-size: 18px;
   line-height: 36px;
+}
+
+.menu-about, .menu-photo {
+  margin-right: 86px;
+}
+
+.menu-depo {
+  margin-right: 62px;
 }
 
 .testimonials {
@@ -169,6 +177,7 @@ a {
   background-color: var(--secondary);
   position: fixed;
   justify-content: center;
+  z-index: 100;
 }
 
 .menulogo {
@@ -180,7 +189,7 @@ a {
 
 .menu-list {
   padding: 24px 0 22px 0;
-  width: 526px;
+  width: 650px;
 }
 
 .item-menu-color {
@@ -202,9 +211,14 @@ a {
   padding-top: 66px;
 }
 
+.primary-flex {
+  width: 1140px;
+  justify-content: space-between;
+}
+
 .primary-title {
   color: var(--secondary);
-  width: 646px;
+  width: 520px;
   height: 115px;
   margin-top: 122px;
   margin-bottom: 20px;
@@ -222,7 +236,11 @@ a {
 
 .secondary-img {
   margin-top: 148px;
-  margin-right: 55px;
+
+}
+
+.second-text-section {
+  margin-right: 230px;
 }
 
 .secondary-title {
@@ -286,3 +304,103 @@ a {
   color: var(--subtitle);
 }
 
+.gallery-section {
+  width: 100%;
+  height: 1000px;
+  background-image: url("../img/bg-purple.svg");
+  background-repeat: no-repeat;
+}
+
+.gray-bg {
+  z-index: -10;
+  margin-top: -106px;
+  margin-bottom: -1000px;
+}
+
+.photo-gallery-img {
+  cursor: pointer;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+.img-1 {
+  width: 425px;
+  height: 291px;
+  margin-right: 28px;
+}
+
+.img-2 {
+  width: 316px;
+  height: 238px;
+}
+
+.img-3 {
+  width: 329px;
+  height: 248px;
+  margin-right: 28px;
+}
+
+.img-4 {
+  width: 426px;
+  height: 292px;
+}
+
+.photo-gallery-margin {
+  margin-bottom: 20px;
+}
+
+.gallery-text-section {
+  width: 364px;
+  text-align: right;
+  margin-left: 96px;
+}
+
+.gallery-title {
+  color: var(--primary);
+  line-height: 48px;
+  margin-bottom: 20px;
+}
+
+.gallery-text {
+  color: var(--subtitle);
+  line-height: 26px;
+}
+
+.zoom-img {
+  z-index: 100;
+  width: 50%;
+  height: auto;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, 0);
+  top: 8%;
+}
+
+@keyframes bounce {
+  0%, 100%, 20%, 50%, 80% {
+    -webkit-transform: translateY(0);
+    -ms-transform:     translateY(0);
+    transform:         translateY(0)
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+    -ms-transform:     translateY(-30px);
+    transform:         translateY(-30px)
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+    -ms-transform:     translateY(-15px);
+    transform:         translateY(-15px)
+  }
+}
+.photo-gallery-img:hover {
+  cursor: pointer;
+  animation-name: bounce;
+  -moz-animation-name: bounce;
+}
