--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -163,6 +163,10 @@ a {
 
 /* Header */
 
+.menu-mobile {
+  display: none;
+}
+
 .menu {
   width: 100%;
   height: 66px;
@@ -655,15 +659,26 @@ a {
 }
 
 .bg-yellow {
-  width: -webkit-fill-available;
+  width: 100%;
+  height: 920px;
   margin-top: -240px;
   margin-bottom: -616px;
   z-index: -10;
+  background-image: url(/assets/img/yellow-bubbles.svg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
 }
 
 .bubbles {
+  width: 100%;
+  height: 1144px;
   margin-top: -488px;
   margin-bottom: -580px;
+  background-image: url(/assets/img/bubbles.svg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
 }
 
 .events-title {
@@ -796,6 +811,11 @@ footer {
 }
 
 .bg-blue {
-  margin-bottom: -50%;
-  width: -webkit-fill-available;
+  margin-bottom: -800px;
+  width: 100%;
+  height: 728px;
+  background-image: url(/assets/img/bg-blue.svg);
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: cover;
 }
